welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  var x:Int = 0
  if (iBirthday)
  	x = x + 5
  
	if (speed < 60 + x)
  	return 0
  if (speed >= 61 + x && speed <= 80 + x)
  	return 1
  return 2
}